r1 (0.1):
	* Primera versión del instalador
r2:
	* Añadido el programa SevenuP

r3 (0.2):
	* Añadido el programa Mappy, versión modifica para la Churrera
	* Añadidos las utilidades mapcnv, mapcnvbin, msc, reordenator y sprcnv de los Mojons Twins
	* Añadido el script churrera_installer.sh para crear o actualizar un proyecto de la Churrera.

r4 (0.3):
	* Ahora se muestra un menú para escoger los elementos a instalar
	* Ahora cada instalador esta en un función aparte para una mayor claridad del código
	* También comprueba si esta instalado lo necesario para instalar las aplicaciones

r5 (0.4):
	* Añadidos Beepola y BeepFX
	* Corregidas las urls en churrera_retriever por cambio de carpeta donde se encuentra el paquete con la Churrera
	* Ahora si se escoge la opción 0 y una o mas opciones se ejecuta la instalación de todo y se cierra sin ejecutar las demás opciones

r6: (0.5):
	* El proyecto pasa a llamarse ahora Herramientas Churreras
	* Añadido instalador para las utilidades del emulador FUSE
	* Ahora make.sh te dice cuanto espacio en memoria te queda (se necesita tener instalado fuse emu utils)
	* La Churrera Retriever ahora actualiza o descarga la Churrera 3.99.2
	* Otros cambios menores